{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 68,
  "lineage": "9daa55eb-0b46-0847-b0b5-f9b7c74e304b",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/high-balancer-353200/zones/us-central1-c/instanceGroups/group-manager",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "cdn_policy": [
              {
                "cache_mode": "CACHE_ALL_STATIC",
                "client_ttl": 3600,
                "default_ttl": 3600,
                "max_ttl": 86400,
                "negative_caching": true,
                "serve_while_stale": 86400,
                "signed_url_cache_max_age_sec": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2022-06-13T11:17:26.445-07:00",
            "custom_request_headers": [
              "X-Client-Geo-Location: {client_region_subdivision}, {client_city}"
            ],
            "custom_response_headers": [
              "X-Cache-Hit: {cdn_cache_status}"
            ],
            "enable_cdn": true,
            "fingerprint": "WCH26aMjFzY=",
            "health_checks": [
              "projects/high-balancer-353200/global/healthChecks/l7-xlb-hc"
            ],
            "id": "projects/high-balancer-353200/global/backendServices/l7-xlb-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "l7-xlb-backend-service",
            "port_name": "my-port",
            "project": "high-balancer-353200",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/high-balancer-353200/global/backendServices/l7-xlb-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_health_check.default",
            "google_compute_instance_group_manager.gmanager",
            "google_compute_instance_template.gcpteam-template",
            "google_compute_network.vpc_network",
            "google_compute_target_pool.default-target"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80",
                  "22"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2022-06-13T11:16:52.744-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/high-balancer-353200/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/high-balancer-353200/global/networks/vpc-network",
            "priority": 1000,
            "project": "high-balancer-353200",
            "self_link": "https://www.googleapis.com/compute/v1/projects/high-balancer-353200/global/firewalls/allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2022-06-13T11:16:52.743-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/high-balancer-353200/global/firewalls/l7-xlb-fw-allow-hc",
            "log_config": [],
            "name": "l7-xlb-fw-allow-hc",
            "network": "https://www.googleapis.com/compute/v1/projects/high-balancer-353200/global/networks/vpc-network",
            "priority": 1000,
            "project": "high-balancer-353200",
            "self_link": "https://www.googleapis.com/compute/v1/projects/high-balancer-353200/global/firewalls/l7-xlb-fw-allow-hc",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-health-check"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.186.242.222",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2022-06-13T11:16:20.955-07:00",
            "id": "projects/high-balancer-353200/global/addresses/l7-xlb-static-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "l7-xlb-static-ip",
            "prefix_length": 0,
            "project": "high-balancer-353200",
            "self_link": "https://www.googleapis.com/compute/v1/projects/high-balancer-353200/global/addresses/l7-xlb-static-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/high-balancer-353200/global/forwardingRules/l7-xlb-forwarding-rule",
            "ip_address": "projects/high-balancer-353200/global/addresses/l7-xlb-static-ip",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "l7-xlb-forwarding-rule",
            "port_range": "80",
            "project": "high-balancer-353200",
            "self_link": "https://www.googleapis.com/compute/beta/projects/high-balancer-353200/global/forwardingRules/l7-xlb-forwarding-rule",
            "target": "projects/high-balancer-353200/global/targetHttpProxies/l7-xlb-target-http-proxy"
          },
          "dependencies": [
            "google_compute_backend_service.default",
            "google_compute_global_address.default",
            "google_compute_health_check.default",
            "google_compute_instance_group_manager.gmanager",
            "google_compute_instance_template.gcpteam-template",
            "google_compute_network.vpc_network",
            "google_compute_target_http_proxy.default",
            "google_compute_target_pool.default-target",
            "google_compute_url_map.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "id": "projects/high-balancer-353200/global/networks/vpc-network",
            "mtu": 0,
            "name": "vpc-network",
            "project": "high-balancer-353200",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/high-balancer-353200/global/networks/vpc-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-06-13T11:17:59.054-07:00",
            "id": "projects/high-balancer-353200/global/targetHttpProxies/l7-xlb-target-http-proxy",
            "name": "l7-xlb-target-http-proxy",
            "project": "high-balancer-353200",
            "proxy_bind": false,
            "proxy_id": 4565017173231845816,
            "self_link": "https://www.googleapis.com/compute/v1/projects/high-balancer-353200/global/targetHttpProxies/l7-xlb-target-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/high-balancer-353200/global/urlMaps/l7-xlb-url-map"
          },
          "dependencies": [
            "google_compute_backend_service.default",
            "google_compute_health_check.default",
            "google_compute_instance_group_manager.gmanager",
            "google_compute_instance_template.gcpteam-template",
            "google_compute_network.vpc_network",
            "google_compute_target_pool.default-target",
            "google_compute_url_map.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/google-beta\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2022-06-13T11:17:47.862-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/high-balancer-353200/global/backendServices/l7-xlb-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "nLbLV3U6yxk=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/high-balancer-353200/global/urlMaps/l7-xlb-url-map",
            "map_id": 5148041631995969956,
            "name": "l7-xlb-url-map",
            "path_matcher": [],
            "project": "high-balancer-353200",
            "self_link": "https://www.googleapis.com/compute/v1/projects/high-balancer-353200/global/urlMaps/l7-xlb-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_service.default",
            "google_compute_health_check.default",
            "google_compute_instance_group_manager.gmanager",
            "google_compute_instance_template.gcpteam-template",
            "google_compute_network.vpc_network",
            "google_compute_target_pool.default-target"
          ]
        }
      ]
    }
  ]
}